--- a/ElTallerDelMaestroWebPage/src/styles.css
+++ b/ElTallerDelMaestroWebPage/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: "Darker Grotesque", sans-serif;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Fahkwang", sans-serif;
+}
