--- a/ElTallerDelMaestroWebPage/src/app/components/home/home.component.html
+++ b/ElTallerDelMaestroWebPage/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <main>
-  <div id="backgroundImageContainer">
+  <div id="heroImageContainer">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a id="logo" class="navbar-brand">LOGO</a>
@@ -46,4 +46,87 @@
       </div>
     </section>
   </div>
+  <section
+    class="d-flex flex-column justify-content-center align-items-center"
+    id="statementSection"
+  >
+    <article>
+      <h2>Jesús Comunidad Amor Casa</h2>
+      <p>
+        ”Necesitamos comunidad, un lugar donde pertenecer, donde las personas
+        tengan amor y respeto real. En Taller del Maestro amamos a Jesús y
+        amamos a las personas. No importa la imagen que tengas de ti mismo, solo
+        importa la imagen que Jesús tiene de tí. Y Él te ama, y esta casa,
+        también es tu casa.“
+      </p>
+    </article>
+  </section>
+  <section class="" id="knowUsSection">
+    <h2>Esta también es tu casa</h2>
+    <div class="imagesContainer d-flex justify-content-center">
+      <img src="/assets/image_church2.jpeg" alt="" />
+      <img src="/assets/image_church1.jpeg" alt="" />
+    </div>
+    <button class="styledButton">Conócenos</button>
+  </section>
+  <section class="" id="activitiesSection">
+    <div class="row">
+      <div
+        class="
+          d-flex
+          flex-column
+          justify-content-center
+          align-items-center
+          activityTitleContainer
+          col
+        "
+      >
+        <h3>Servicios oficiales</h3>
+        <p>
+          Domingo 11h <br />
+          Miércoles 20h
+        </p>
+      </div>
+      <div
+        class="
+          d-flex
+          flex-column
+          justify-content-center
+          align-items-center
+          activityTitleContainer
+          col
+        "
+      >
+        <h3>Jóvenes VSN</h3>
+        <p>Sábados a las 18h</p>
+      </div>
+      <div
+        class="
+          d-flex
+          flex-column
+          justify-content-center
+          align-items-center
+          activityTitleContainer
+          col
+        "
+      >
+        <h3>Estudios</h3>
+        <p>Vida Nueva: martes a las 20h</p>
+      </div>
+      <div
+        class="
+          d-flex
+          flex-column
+          justify-content-center
+          align-items-center
+          activityTitleContainer
+          col
+        "
+      >
+        <h3>Oración</h3>
+        <p>Sábados 8h</p>
+      </div>
+    </div>
+    <button class="styledButton">Conócenos</button>
+  </section>
 </main>
