--- a/ElTallerDelMaestroWebPage/src/app/components/home/home.component.html
+++ b/ElTallerDelMaestroWebPage/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
   <div id="heroImageContainer">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a id="logo" class="navbar-brand">LOGO</a>
+        <a class="navbar-brand logo">LOGO</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -16,18 +16,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navItems">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link">Conócenos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link">Conecta</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link">Dar</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link">Contacto</a>
-            </li>
+            <li class="nav-item"><a class="nav-link">Conócenos</a></li>
+            <li class="nav-item"><a class="nav-link">Conecta</a></li>
+            <li class="nav-item"><a class="nav-link">Dar</a></li>
+            <li class="nav-item"><a class="nav-link">Contacto</a></li>
           </ul>
         </div>
       </div>
@@ -50,16 +42,16 @@
     class="d-flex flex-column justify-content-center align-items-center"
     id="statementSection"
   >
-    <article>
-      <h2>Jesús Comunidad Amor Casa</h2>
-      <p>
-        ”Necesitamos comunidad, un lugar donde pertenecer, donde las personas
-        tengan amor y respeto real. En Taller del Maestro amamos a Jesús y
-        amamos a las personas. No importa la imagen que tengas de ti mismo, solo
-        importa la imagen que Jesús tiene de tí. Y Él te ama, y esta casa,
-        también es tu casa.“
-      </p>
-    </article>
+    rticle>
+    <h2>Jesús Comunidad Amor Casa</h2>
+    <p>
+      ”Necesitamos comunidad, un lugar donde pertenecer, donde las personas
+      tengan amor y respeto real. En Taller del Maestro amamos a Jesús y amamos
+      a las personas. No importa la imagen que tengas de ti mismo, solo importa
+      la imagen que Jesús tiene de tí. Y Él te ama, y esta casa, también es tu
+      casa.“
+    </p>
+    rticle>
   </section>
   <section class="" id="knowUsSection">
     <h2>Esta también es tu casa</h2>
@@ -127,6 +119,158 @@
         <p>Sábados 8h</p>
       </div>
     </div>
-    <button class="styledButton">Conócenos</button>
+  </section>
+  <section class="d-flex justify-content-center" id="connectSection">
+    <div class="">
+      <h3>Conecta</h3>
+      <p>La iglesia no se detiene, encuentra la mejor forma para ti.</p>
+      <div id="connectSectionLinksGroup" class="">
+        <div class="connectSectionLinks">
+          <h4>Podcast</h4>
+          <mat-icon>arrow_forward_ios</mat-icon>
+        </div>
+        <div class="connectSectionLinks">
+          <h4>Devocionales</h4>
+          <mat-icon>arrow_forward_ios</mat-icon>
+        </div>
+        <div class="connectSectionLinks">
+          <h4>Blog</h4>
+          <mat-icon>arrow_forward_ios</mat-icon>
+          <mat-icon>copyright</mat-icon>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="d-flex justify-content-center" id="generousLifeSection">
+    <div id="generousLifeSectionContent">
+      <h2>Vida Generosa</h2>
+      <p>
+        Queremos agradecerte por hacer posible que la iglesia siga avanzando. Es
+        gracias a tus diezmos y ofrendas que proyectos y llamados siguen
+        adelante, para que muchos conozcan a Jesús. <br />
+        <br />
+        ¿Quiéres colaborar? Descubre como.
+      </p>
+    </div>
+    <div class="generousLifeSectionImageContainer">
+      <img src="/assets/image_church6.jpeg" />
+      <div id="generousLifeSectionImageContainerBackgroundBlock1">
+        <button class="styledButton">Proyectos</button>
+      </div>
+    </div>
+    <div class="generousLifeSectionImageContainer">
+      <img src="/assets/image_church2.jpeg" />
+      <div id="generousLifeSectionImageContainerBackgroundBlock2">
+        <button id="test" class="styledButton">Formas de Dar</button>
+      </div>
+    </div>
+  </section>
+  <section
+    class="d-flex flex-column justify-content-center align-items-center"
+    id="formSection"
+  >
+    <div id="formSectionContent">
+      <h2>Sin cesar,en todo tiempo</h2>
+      <p>¿Necesitas oración? Haznos saber cómo podemos orar por ti.</p>
+    </div>
+    <form id="contactForm" [formGroup]="contactForm">
+      <div class="row">
+        <div class="col">
+          <input
+            formControlName="name"
+            placeholder="nombre"
+            class="styledInput"
+            type="text"
+          />
+        </div>
+        <div class="col">
+          <input
+            formControlName="surname"
+            placeholder="apellido"
+            class="styledInput"
+            type="text"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <input
+            formControlName="email"
+            placeholder="email"
+            class="styledInput"
+            type="email"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <input
+            formControlName="phone"
+            placeholder="teléfono"
+            class="styledInput"
+            type="tel"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <textarea
+            formControlName="request"
+            class="styledInput"
+            placeholder="petición"
+            cols="30"
+            rows="0"
+          ></textarea>
+        </div>
+      </div>
+      <div class="d-flex mt-3">
+        <div class="control-group">
+          <label class="control control-checkbox">
+            Doy consentimiento para que la iglesia Taller del Maestro almacene
+            estos datos para poder ponerse en contacto conmigo.
+            <input type="checkbox" />
+            <div class="control_indicator"></div>
+          </label>
+        </div>
+        <button class="styledButton">Enviar</button>
+      </div>
+    </form>
+  </section>
+  <section id="footbarSection">
+    <div class="d-flex flex-column align-items-center" id="footbar">
+      <div class="logo">LOGO</div>
+      <div id="footbarTitles" class="row">
+        <div class="col">MENU</div>
+        <div class="col">SOPORTE</div>
+      </div>
+      <div id="footerLinks" class="row border-top">
+        <div class="col">
+          <p [routerLink]="['/routePath']">Conócenos</p>
+          <p [routerLink]="['/routePath']">Conecta</p>
+          <p [routerLink]="['/routePath']">Dar</p>
+          <p [routerLink]="['/routePath']">Proyectos</p>
+        </div>
+        <div class="col">
+          <p [routerLink]="['/routePath']">Preguntas frecuentes</p>
+          <p [routerLink]="['/routePath']">Términos y condiciones</p>
+          <p [routerLink]="['/routePath']">Política de Privacidad</p>
+        </div>
+      </div>
+
+      <span
+        style="
+          font-size: 20px;
+          font-family: 'Darker Grotesque', sans-serif;
+          font-weight: 300;
+        "
+      >
+        www.eltallerdelmaestro.com
+      </span>
+      <hr />
+      <div class="d-flex">
+        <mat-icon>copyright</mat-icon>
+        <p>2021 Taller del Maestro</p>
+      </div>
+    </div>
   </section>
 </main>
